--- a/kitano.html
+++ b/kitano.html
@@ -146,7 +146,7 @@
   <script>
     // ▼▼▼ あなたの設定 ▼▼▼
     // このHTMLファイルを使う人の名前をここに書きます
-    const USER_NAME = "北野賢一郎"; 
+    const USER_NAME = "北野"; 
     
     // GASをデプロイして取得した新しいウェブアプリのURLを貼り付けてください
     const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbz2FNcMIO2_bL1mU9sPkusAByFJ5bwtFVx34JuJ73nTwbtsF89IcrJfQT5IUYkeoTHQ/exec";
